--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #Cuando las tablas no existen never, cuando ya existen always
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:/data.sql
+
+#Swagger Configuration
+bookhub.open-api.dev-url=http://localhost:8080/api/v1
+#url: http://localhost:8080/api/v1/swagger-ui.html
