--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.sql.init.data-locations=classpath:/data.sql
 #Swagger Configuration
 bookhub.open-api.dev-url=http://localhost:8080/api/v1
 #url: http://localhost:8080/api/v1/swagger-ui.html
+
+#File Configuration
+storage.location=mediafiles
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=1000B
